@@ -17,8 +17,6 @@ $.widget("asm.animalchoosermulti", {
     options: {
         ids: "",
         rows: [],
-        rowlocations: [],
-        rowspecies: [],
         node: null,
         dialog: null,
         display: null,
@@ -48,31 +46,31 @@ $.widget("asm.animalchoosermulti", {
             html.info(_("{0} selected").replace("{0}", "0")),
             '</div>',
             '<img style="height: 16px" class="spinner" src="static/images/wait/rolling_3a87cd.svg" />',
-            '<table style="border-bottom: 1px solid #aaa; width: 100%">',
-            '<tr>',
-            '<td>' + _("Locations") + ':</td>',
-            '<td class="animalchoosermulti-locations"></td>',
-            '</tr>',
-            '<tr>',
-            '<td>' + _("Species") + ':</td>',
-            '<td class="animalchoosermulti-species"></td>',
-            '</tr>',
-            '<tr>',
-            '<td>' + _("Litters") + ':</td>',
-            '<td class="animalchoosermulti-litters"></td>',
-            '</tr>',
-            '</table>',
+            '<div style="border-bottom: 1px solid #aaa; width: 100%">',
+            '<div class="asm-animalchoosermulti-filter">',
+            '<a href="#" class="animalchoosermulti-selectall" title="Select all"><span class="ui-icon ui-icon-check"></span></a>',
+            '</div>',
+            '<div class="asm-animalchoosermulti-filter">',
+             _("Locations") + ': <select multiple="multiple" class="animalchoosermulti-locations asm-bsmselect"></select>', 
+            '</div>',
+            '<div class="asm-animalchoosermulti-filter">',
+             _("Species") + ': <select multiple="multiple" class="animalchoosermulti-species asm-bsmselect"></select>', 
+            '</div>',
+            '<div class="asm-animalchoosermulti-filter">',
+             _("Litters") + ': <select multiple="multiple" class="animalchoosermulti-litters asm-bsmselect"></select>', 
+            '</div>',
+            '</div>',
             '<div class="animalchoosermulti-results">',
             '</div>',
             '</div>', 
             '</div>'
         ].join("\n");
 
-        var node = $(h);
-        var self = this;
+        let node = $(h);
+        let self = this;
 
         this.options.node = node;
-        var dialog = node.find(".animalchoosermulti-find");
+        let dialog = node.find(".animalchoosermulti-find");
         this.options.dialog = dialog;
 
         this.options.display = node.find(".animalchoosermulti-display");
@@ -129,9 +127,8 @@ $.widget("asm.animalchoosermulti", {
         this.element.val("");
         this.options.ids = "";
         this.options.display.html("");
-        this.options.locations.find(":checked").prop("checked", false);
-        this.options.species.find(":checked").prop("checked", false);
         this.options.results.find(":checked").prop("checked", false);
+        this.update_status();
     },
 
     is_empty: function() {
@@ -191,15 +188,40 @@ $.widget("asm.animalchoosermulti", {
     },
 
     /**
+     * Update the visible list of animals according to what's selected in the filters
+     */
+    update_filters: function() {
+        let results = this.options.results, locations = this.options.locations, 
+            species = this.options.species, litters = this.options.litters, 
+            dialog = this.options.dialog;
+        $.each(this.rows, function(i, a) {
+            let show = true;
+            let selspecies = String(species.val()).trim().split(",");
+            if ( String(species.val()).trim() && selspecies.indexOf(String(a.SPECIESID)) == -1 ) { show = false; }
+            let selloc = String(locations.val()).trim().split(",");
+            if ( String(locations.val()).trim() ) {
+                if (a.ACTIVEMOVEMENTTYPE == 1 && selloc.indexOf("m1") == -1) { show = false; }
+                if (a.ACTIVEMOVEMENTTYPE == 2 && selloc.indexOf("m2") == -1) { show = false; }
+                if (a.ACTIVEMOVEMENTTYPE == 8 && selloc.indexOf("m8") == -1) { show = false; }
+                if (!a.ACTIVEMOVEMENTTYPE && selloc.indexOf(String(a.SHELTERLOCATION)) == -1) { show = false; }
+            }
+            let sellitter = String(litters.val()).trim().split(",");
+            if ( String(litters.val()).trim() && sellitter.length > 0 && sellitter.indexOf(a.ACCEPTANCENUMBER) == -1) { show = false; }
+            // Show/hide the result appropriately
+            dialog.find(".animalselect[data='" + a.ID + "']").closest(".asm-animalchoosermulti-result").toggle(show);
+        });
+    },
+
+    /**
      * Updates the info strip at the top to show how many animals selected
      */
     update_status: function() {
         var c = this.options.results.find(":checked").length;
         this.options.dialog.find(".totalselected").html(html.info(_("{0} selected").replace("{0}", c)));
-        this.options.results.find(".asm-animalchoosermulti-selected").removeClass("asm-animalchoosermulti-selected");
+        this.options.results.find(".asm-animalchoosermulti-selected").removeClass("asm-animalchoosermulti-selected").removeClass("ui-state-highlight");
         this.options.results.find(":checked").each(function() {
             var tn = $(this);
-            tn.closest(".asm-animalchoosermulti-result").addClass("asm-animalchoosermulti-selected");
+            tn.closest(".asm-animalchoosermulti-result").addClass("asm-animalchoosermulti-selected").addClass("ui-state-highlight");
         });
     },
 
@@ -214,6 +236,7 @@ $.widget("asm.animalchoosermulti", {
         $.each(animalids.split(","), function(i, v) {
             results.find("data=['" + v + "']").prop("checked", true);
         });
+        self.update_status();
         self._trigger("change", null, animalids);
     },
 
@@ -244,97 +267,68 @@ $.widget("asm.animalchoosermulti", {
                 var h = "";
                 var rv = jQuery.parseJSON(data);
                 self.rows = rv.rows;
-                self.rowlocations = rv.locations;
-                self.rowspecies = rv.species;
-                self.rowlitters = rv.litters;
 
-                // Add a thumbnail for each shelter animal to the results
+                // Update the list of locations
+                let ll = [];
+                ll.push(html.list_to_options(rv.locations, "ID", "LOCATIONNAME"));
+                ll.push('<option value="m1">' + _("Trial Adoption") + '</option>');
+                ll.push('<option value="m2">' + _("Foster") + '</option>');
+                ll.push('<option value="m8">' + _("Retailer") + '</option>');
+                locations.html( ll.join("\n") );
+                locations.change();
+                locations.on("change", function(e) {
+                    self.update_filters();
+                });
+
+                // Species list
+                species.html( html.list_to_options(rv.species, "ID", "SPECIESNAME") );
+                species.change();
+                species.on("change", function(e) {
+                    self.update_filters();
+                });
+
+                // Litters list
+                let lh = [];
+                $.each(rv.litters, function(i, l) {
+                    lh.push('<option value="' + html.title(l.ACCEPTANCENUMBER) + '">' + common.nulltostr(l.MOTHERCODE) + ' ' + 
+                        common.nulltostr(l.MOTHERNAME) + ' ' + l.ACCEPTANCENUMBER + ' - ' + l.SPECIESNAME + '</option>');
+                });
+                litters.html( lh.join("\n") );
+                litters.change();
+                litters.on("change", function(e) {
+                    self.update_filters();
+                });
+
+                // Load the list of animals
                 $.each(self.rows, function(i, a) {
-                    var loc = '<input type="hidden" class="locationid" data="{locid}" />'.replace("{locid}", a.SHELTERLOCATION);
-                    // If the animal has an active movement, don't include their last location, add a hook for the movement type instead
-                    if (a.ACTIVEMOVEMENTTYPE > 0) { loc = '<input type="hidden" class="activemovementtype" data="{mtype}" />'.replace("{mtype}", a.ACTIVEMOVEMENTTYPE); }
                     results.append( '<div class="asm-animalchoosermulti-result">' + 
-                        html.animal_link_thumb(a, { showselector: true, showunit: true, showlocation: true }) + 
-                        loc + 
-                        '<input type="hidden" class="speciesid" data="{speciesid}" />'.replace("{speciesid}", a.SPECIESID) +
-                        '<input type="hidden" class="litterid" data="{litterid}" />'.replace("{litterid}", self.litterid_escape(a.ACCEPTANCENUMBER)) +
+                        html.animal_link_thumb(a, { showselector: true, showunit: true, showlocation: true }) +
                     '</div>' );
                 });
+
+                // Delegate event handler for the checkboxes
                 results.off("click", "input[type='checkbox']");
-                results.on("click", "input[type='checkbox']", function(e) {
-                    self.update_status();
-                });
-
-                // Add virtual locations for Foster and Retailer
-                if (self.id_used("ACTIVEMOVEMENTTYPE", 2)) {
-                    locations.append('<span style="white-space: nowrap"><input type="checkbox" class="mtypecheck" data="2" id="mtype8" />' +
-                        '<label for="mtype2">' + _("Foster") + '</label></span>');
-                }
-                if (self.id_used("ACTIVEMOVEMENTTYPE", 8)) {
-                    locations.append('<span style="white-space: nowrap"><input type="checkbox" class="mtypecheck" data="8" id="mtype8" />' +
-                        '<label for="mtype8">' + _("Retailer") + '</label></span>');
-                }
-
-                // Add a checkbox for each location and make clicking it auto select those animals
-                $.each(self.rowlocations, function(i, l) {
-                    if (self.id_used("SHELTERLOCATION", l.ID)) {
-                        locations.append('<span style="white-space: nowrap"><input type="checkbox" class="loccheck" data="' + l.ID + '" id="loc' + l.ID + '" />' +
-                            '<label for="loc' + l.ID + '">' + l.LOCATIONNAME + '</label></span> ');
-                    }
-                });
-                locations.off("click", "input[type='checkbox']");
-                locations.on("click", "input[type='checkbox']", function(e) {
-                    var tn = $(this);
-                    if (tn.hasClass("loccheck")) {
-                        results.find(".locationid[data='" + tn.attr("data") + "']").each(function() {
-                            $(this).closest("div").find(".animalselect").prop("checked", tn.prop("checked"));
-                        });
-                    }
-                    else if (tn.hasClass("mtypecheck")) {
-                        results.find(".activemovementtype[data='" + tn.attr("data") + "']").each(function() {
-                            $(this).closest("div").find(".animalselect").prop("checked", tn.prop("checked"));
-                        });
-                    }
-                    self.update_status();
-                });
-
-                // Add a checkbox for each species and make clicking it auto select those animals
-                $.each(self.rowspecies, function(i, s) {
-                    if (self.id_used("SPECIESID", s.ID)) {
-                        species.append('<span style="white-space: nowrap"><input type="checkbox" class="spcheck" data="' + s.ID + '" id="sp' + s.ID + '" />' +
-                            '<label for="sp' + s.ID + '">' + s.SPECIESNAME + '</label></span> ');
-                    }
-                });
-                species.off("click", "input[type='checkbox']");
-                species.on("click", "input[type='checkbox']", function(e) {
-                    var tn = $(this);
-                    var aset = results.find(".speciesid[data='" + tn.attr("data") + "']").each(function() {
-                        $(this).closest("div").find(".animalselect").prop("checked", tn.prop("checked"));
-                    });
-                    self.update_status();
-                });
-
-                // Add a checkbox for each litter and make clicking it auto select those animals
-                $.each(self.rowlitters, function(i, l) {
-                    if (self.id_used("ACCEPTANCENUMBER", l.ACCEPTANCENUMBER)) {
-                        litters.append('<span style="white-space: nowrap"><input type="checkbox" class="litcheck" data="' + 
-                            self.litterid_escape(l.ACCEPTANCENUMBER) + '" id="lit' + l.ID + '" />' +
-                            '<label for="lit' + l.ID + '">' + 
-                            common.nulltostr(l.MOTHERCODE) + ' ' + common.nulltostr(l.MOTHERNAME) + 
-                            ' ' + l.ACCEPTANCENUMBER + ' - ' + l.SPECIESNAME + '</label></span> ');
-                    }
-                });
-                litters.off("click", "input[type='checkbox']");
-                litters.on("click", "input[type='checkbox']", function(e) {
-                    var tn = $(this);
-                    var aset = results.find(".litterid[data='" + tn.attr("data") + "']").each(function() {
-                        $(this).closest("div").find(".animalselect").prop("checked", tn.prop("checked"));
-                    });
+                results.on("click", "input[type='checkbox']", function(e) { 
                     self.update_status();
                 });
 
                 // Remove the spinner
                 dialog.find(".spinner").hide();
+
+                // Select all toggle
+                dialog.find(".animalchoosermulti-selectall").click(function(e) {
+                    if (!self.select_all_toggle) {
+                        self.select_all_toggle = true;
+                        dialog.find(".animalselect:visible").prop("checked", true);
+                        self.update_status();
+                    }
+                    else {
+                        self.select_all_toggle = false;
+                        dialog.find(".animalselect").prop("checked", false);
+                        self.update_status();
+                    }
+                    return false;
+                });
 
                 // Was there a value already set by the markup? If so, use it
                 if (self.element.val() != "") {
